--- a/frontend/MyWorkSpace/css/register.css
+++ b/frontend/MyWorkSpace/css/register.css
@@ -47,11 +47,11 @@ h2 {
     margin-top: 20px;
 }
 
-.register button :hover{
+.register .btn:hover{
     color: #fff;
     border: none;
-    font-size: 20px;
-    transform: scale(1.10);
+    font-size: 18px;
+    transform: scale(1);
     transition: .2s;     
 }
 
