--- a/frontend/MyWorkSpace/css/sidebar.css
+++ b/frontend/MyWorkSpace/css/sidebar.css
@@ -12,27 +12,6 @@ sidebar {
     background: linear-gradient(#001d3d, #560bad, #7209b7, #b5179e, #f72585);
 }
 
-main {
-    display: block;
-    height: 100%;
-    background-color: #001d3d;
-    width: calc(100% - 300px);
-}
-
-.flex-dashboard header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    height: 100px;
-    color: #fff;
-    background-color: #001d3d;
-    padding: 0 30px;
-    -webkit-box-shadow: 6px 1px 5px 0px rgba(255,255,255,1);
-    -moz-box-shadow: 6px 1px 5px 0px rgba(255,255,255,1);
-    box-shadow: 6px 1px 5px 0px rgba(255,255,255,1);
-}
-
 sidebar .sidebar-title {
     display: flex;
     flex-direction: column;
@@ -53,21 +32,12 @@ sidebar .sidebar-title h2 {
     margin-top: 8px;
 }
 
-.flex-dashboard header a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 20px;
-    font-style: italic;    
-}
-
 sidebar .menu ul{
    list-style-type: none;
-   padding-left: 0%;
-   
+   padding-left: 0%;   
 }
 
-sidebar .menu ul li {
-    
+sidebar .menu ul li {    
     text-align: center;   
     width: 100%;
     height: 60px;      
@@ -76,7 +46,13 @@ sidebar .menu ul li {
 sidebar .menu ul li a {
     text-decoration: none;
     color: #fff;
-    font-size: 20px;
+    font-size: 15px;
     font-style: italic;
+    text-transform: uppercase;
+}
 
+sidebar .menu ul li a:hover {
+    color: #f72585;
+    font-size: 20px;
+    text-shadow: 5px 5px 10px #fff;
 }
