--- a/frontend/MyWorkSpace/views/dashboard.html
+++ b/frontend/MyWorkSpace/views/dashboard.html
@@ -21,13 +21,10 @@
             <div class="menu">
                 <ul>
                     <li>
-                        <a href="#">Dashboard</a>
-                    </li>
-                    <li>
-                        <a href="#">Perfil</a>
-                    </li>
-                    <li>
                         <a href="#">Projetos</a>
+                    </li>
+                    <li>
+                        <a href="#">Tarefas</a>
                     </li>
                 </ul>
             </div>       
@@ -38,8 +35,50 @@
                 <a href="#">Logout</a>
             </header>
             <div class="main-content">
-                <p>main</p>
-            </div>
+                <div class="cards-row">
+                    <div class="cards">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../imagens/myProject.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">My Project</h5>
+                              <p class="card-text">Meu primeiro Projeto!</p>
+                              <a href="#" class="btn">Cadastrar Tasks</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../imagens/myProject.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">My Project</h5>
+                              <p class="card-text">Meu primeiro Projeto!</p>
+                              <a href="#" class="btn">Cadastrar Tasks</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../imagens/myProject.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">My Project</h5>
+                              <p class="card-text">Meu primeiro Projeto!</p>
+                              <a href="#" class="btn">Cadastrar Tasks</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../imagens/myProject.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">My Project</h5>
+                              <p class="card-text">Meu primeiro Projeto!</p>
+                              <a href="#" class="btn">Cadastrar Tasks</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button type="button" class="btn">Novo Projeto</button>     
+            </div>                     
         </main>
     </div>
     <script src="../plugins/bootstrap-5.2.0-beta1-dist/js/bootstrap.min.js"></script>
