--- a/frontend/MyWorkSpace/views/myProject.html
+++ b/frontend/MyWorkSpace/views/myProject.html
@@ -31,13 +31,23 @@
         </sidebar>
         <main>
             <header>
-                <a href="../views/dashboard.html">Home</a>
+                <a href="#">Home</a>
                 <a href="../index.html">Logout</a>
             </header>
             <div class="main-content">
-                <div class="logo-dashboard">
-                    <img src="../imagens/kanban.png" alt="Logo da Aplicação, representada por dois cards Kanban">
+                <div class="cards-row">
+                    <div class="cards">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../imagens/myProject.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">My Project</h5>
+                              <p class="card-text">Meu primeiro Projeto!</p>
+                              <a href="../views/myTasks.html" class="btn">Cadastrar Tasks</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <button type="button" class="btn">Novo Projeto</button>     
             </div>                     
         </main>
     </div>
