--- a/frontend/MyWorkSpace/views/register.html
+++ b/frontend/MyWorkSpace/views/register.html
@@ -33,7 +33,7 @@
                 <button type="button" class="btn">Cadastrar</button>
             </form>
             <div class="register-footer">
-                <a href="../index.html" target="blank">Retornar ao Login</a>
+                <a href="../index.html">Retornar ao Login</a>
             </div>
         </div>
     </div>
